Fix equal-height flexbox row wrapping on mobile

--- a/bootstrap/less/custom.less
+++ b/bootstrap/less/custom.less
@@ -19,6 +19,11 @@ a {
 /* Grid revolutions */
 .row.eq-height {
     display: flex;
+    flex-wrap: wrap;
+
+    > * {
+        flex-shrink: 0;
+    }
 }
 .vertical-center {
     display: flex;
@@ -587,8 +592,7 @@ nav.navbar-default {
 
             /* Staff page */
             h3.nickname {
-                font-size: 28px;
-                margin-top: 40px;
+                white-space: nowrap;
 
                 &:before {
                     content: '“';
